# PointVit

./: .gitignore
models/: Initial.py
models/TransformerBlock/: TransformerBlock.py
modules/: pointVit.py
modules/dataset/utils/: datasetHandler.py
modules/dataset/utils/preprocessors/: processingUtils.py
modules/embeddingHandler/featureEmbeddingHandler/: pcaEmbedder.py
modules/embeddingHandler/positionalEmbeddingHandler/: simplePositionEmbedder.py
modules/encoders/: pointVitEncoder.py
modules/mlps/: simpleMlp.py
modules/visualization/: try.py  voxelVisualizer.py
modules/voxelization/: CMakeLists.txt  cloudVoxelizer.py
modules/voxelization/include/: voxelizer.h
modules/voxelization/python/voxelizer/: core.py
modules/voxelization/src/: bindings.cpp  compute_keys.cu  fill_voxels.cu  voxelize.cpp
